--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ button {
   cursor: pointer;
   margin: 10px;
 }
+#monBouton2:hover {
+  animation: shake 0.3s;
+}
+#monBouton:hover {
+  animation: shake 0.3s;
+}
 button:hover {
   transform: scale(1.1);
   transition: 0.2s;
@@ -26,9 +32,6 @@ button:hover {
 #monBouton2 {
   background-color: #e74c3c; /* rouge */
   color: white;
-}
-.btn-no:hover {
-  animation: shake 0.3s;
 }
 @keyframes shake {
   0% { transform: translateX(0); }
