--- a/dodostyle.css
+++ b/dodostyle.css
@@ -7,3 +7,15 @@ body {
   background-position: center;   /* centre l’image */
   background-repeat: no-repeat;  /* pas de répétition */
 }
+button {
+  padding: 15px 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
+}
+button:hover {
+  transform: scale(1.1);
+  transition: 0.2s;
+}
