--- a/dodostyle.css
+++ b/dodostyle.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
 
-  background-image: url("images/fond.jpg");
+  background-image: url("images/skin.png");
   background-size: cover;        /* couvre tout l’écran */
   background-position: center;   /* centre l’image */
   background-repeat: no-repeat;  /* pas de répétition */
