--- a/dodostyle.css
+++ b/dodostyle.css
@@ -19,3 +19,7 @@ button:hover {
   transform: scale(1.1);
   transition: 0.2s;
 }
+.logo {
+  width: 150px;   /* change la taille ici */
+  height: auto;   /* garde les proportions */
+}
