--- a/style.css
+++ b/style.css
@@ -53,3 +53,12 @@ button:hover {
   border-radius: 15px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.4);
 }
+body2 {
+  margin: 0;
+  font-family: Arial, sans-serif;
+
+  background-image: url("images/skin.png");
+  background-size: cover;        /* couvre tout l’écran */
+  background-position: center;   /* centre l’image */
+  background-repeat: no-repeat;  /* pas de répétition */
+}
