--- a/style.css
+++ b/style.css
@@ -53,3 +53,12 @@ button:hover {
   border-radius: 15px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.4);
 }
+.logob {
+  width: 10px;   /* change la taille ici */
+  height: auto;   /* garde les proportions */
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+}
