--- a/style.css
+++ b/style.css
@@ -31,22 +31,7 @@ button:hover {
   background-color: #e74c3c; /* rouge */
   color: white;
 }
-#monBoutonBacktomenu {
-  background-color: none;
-  color: none;
-  border: none;
-  top: 10px;
-  left: 10px;
-  font-size: 30px;        /* taille du texte */
-  font-family: "Courier New", monospace;
-  border-radius: 50px;   /* forme arrondie */
-  padding: 15px 35px;
-  font-size: 18px;
-  border: none;
-  cursor: pointer;
-  margin: 10px;
-}
-#monBoutonBacktomenu:hover {
+#logoBtn:hover {
   text-decoration: underline;
   opacity: 0.8;
 }
