--- a/dodobg.css
+++ b/dodobg.css
@@ -1,1 +1,11 @@
 
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+
+  background-image: url("images/skin.png");
+  background-size: cover;        /* couvre tout l’écran */
+  background-position: center;   /* centre l’image */
+  background-repeat: no-repeat;  /* pas de répétition */
+}
