--- a/dodobg.css
+++ b/dodobg.css
@@ -9,3 +9,12 @@ body {
   background-position: center;   /* centre l’image */
   background-repeat: no-repeat;  /* pas de répétition */
 }
+.logo {
+  width: 100px;   /* change la taille ici */
+  height: auto;   /* garde les proportions */
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+}
