--- a/dodobg.css
+++ b/dodobg.css
@@ -1,5 +1,11 @@
-
-
+button {
+  padding: 15px 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
+}
 body {
   margin: 0;
   font-family: Arial, sans-serif;
